[package]
name = "banderwagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
bandersnatch = "0.1.1"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
# ark-ed-on-bls12-381 = { version = "^0.3.0" }
hex = "0.4.3"
[dev-dependencies]
ark-std = "^0.3.0"

[profile.bench]
debug = true
opt-level = 3
debug-assertions = true
incremental = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
incremental = true

# criterion = "0.3.4"

# [[bench]]
# name = "benchmark_main"
# harness = false


[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-ff/asm", "ark-ec/parallel"]
